[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.129.0",
    "panda>=0.3.1",
    "pandas>=3.0.1",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
